# rust_test

./: .gitattributes  .gitignore  Cargo.toml  LICENSE.md  README.md  compile_shaders.bat  compile_shaders.sh  process_sdf.bat  rebuild_sdf.bat  rendersdf.bat  rust_test.bat  sdf2tilemap.bat  vbufferbench.bat
data/: ganymede-and-jupiter.sdf
shader/: culling.comp  culling.spv  culling_debug.frag  culling_debug_frag.spv  depth_pyramid_downsample.comp  depth_pyramid_downsample.spv  depth_pyramid_downsample_all.comp  depth_pyramid_downsample_all.spv  depth_pyramid_first_mip.comp  depth_pyramid_first_mip.spv  full_screen_triangle.vert  full_screen_triangle_vert.spv  main.frag  main.vert  main_frag.spv  main_frontface.vert  main_frontface_vert.spv  main_vert.spv  simple.frag  simple_frag.spv  vbuffer.frag  vbuffer.vert  vbuffer_color.frag  vbuffer_color_frag.spv  vbuffer_frag.spv  vbuffer_getattributeatvertex.frag  vbuffer_getattributeatvertex.vert  vbuffer_getattributeatvertex_frag.spv  vbuffer_getattributeatvertex_vert.spv  vbuffer_leadingvertex.frag  vbuffer_leadingvertex.vert  vbuffer_leadingvertex_frag.spv  vbuffer_leadingvertex_vert.spv  vbuffer_meshshader.frag  vbuffer_meshshader.mesh  vbuffer_meshshader_frag.spv  vbuffer_meshshader_mesh.spv  vbuffer_nonindexed.frag  vbuffer_nonindexed.vert  vbuffer_nonindexed_frag.spv  (+4 more)
src/: culling.rs  culling_debug.rs  depth_pyramid.rs  instances.rs  lib.rs  main.rs  minivector.rs  render_cubes.rs  sdf.rs  sdf_texture.rs  serialization.rs  sparse_sdf.rs  vulkan_base.rs  vulkan_helpers.rs
