[package]
name = "rust_test"
version = "0.1.0"
authors = ["Sebastian Aaltonen <sebastian.aaltonen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.31"
ash-window = "0.5"
winit = "0.24"
image = "0.23"
rand = "0.7.3"
miniz_oxide = "0.4.3"
vk-mem = "0.2.0"
